--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -16,82 +16,82 @@
 </head>
 <body>
 <div class="box">
-    <!--    <div class="minibar">-->
-    <!--        <div class="your__city">-->
-    <!--            <div class="window__text">-->
-    <!--                <h2>Выберите свой город</h2>-->
-    <!--                <img src="img/close%201.png" alt="close">-->
-    <!--            </div>-->
-    <!--            <label>-->
-    <!--                <input type="text" placeholder="Ваш город">-->
-    <!--            </label>-->
-    <!--            <ul class="cities">-->
-    <!--                <li><a href="#" style="color: #0d6efd">Москва</a></li>-->
-    <!--                <li><a href="#">Санкт-Петербург</a></li>-->
-    <!--                <li><a href="#">Краснодар</a></li>-->
-    <!--                <li><a href="#">Екатеринбург</a></li>-->
-    <!--                <li><a href="#">Ростов-на-Дону</a></li>-->
-    <!--                <li><a href="#">Самара</a></li>-->
-    <!--            </ul>-->
-    <!--        </div>-->
+        <div class="minibar">
+            <div class="your__city">
+                <div class="window__text">
+                    <h2>Выберите свой город</h2>
+                    <img src="img/close%201.png" alt="close">
+                </div>
+                <label>
+                    <input type="text" placeholder="Ваш город">
+                </label>
+                <ul class="cities">
+                    <li><a href="#" style="color: #0d6efd">Москва</a></li>
+                    <li><a href="#">Санкт-Петербург</a></li>
+                    <li><a href="#">Краснодар</a></li>
+                    <li><a href="#">Екатеринбург</a></li>
+                    <li><a href="#">Ростов-на-Дону</a></li>
+                    <li><a href="#">Самара</a></li>
+                </ul>
+            </div>
 
-    <!--        <div class="Request_a_call">-->
-    <!--            <div class="window__text">-->
-    <!--                <h2>Заказать звонок</h2>-->
-    <!--                <img src="img/close%201.png" alt="close">-->
-    <!--            </div>-->
-    <!--            <div class="your_name">-->
-    <!--                <p>Ваше имя</p>-->
-    <!--                <input type="text">-->
-    <!--            </div>-->
-    <!--            <div class="your__tel">-->
-    <!--                <p>Номер телефона</p>-->
-    <!--                <input type="tel" placeholder="+7 (999) 999-99-99">-->
-    <!--                <img src="img/rashka.png" alt="">-->
-    <!--            </div>-->
-    <!--            <div class="call_btn">-->
-    <!--                <button>Заказать звонок</button>-->
-    <!--            </div>-->
-    <!--        </div>-->
+            <div class="Request_a_call">
+                <div class="window__text">
+                    <p>Заказать звонок</p>
+                    <img src="img/close%201.png" alt="close">
+                </div>
+                <div class="your_name">
+                    <p>Ваше имя</p>
+                    <input type="text">
+                </div>
+                <div class="your__tel">
+                    <p>Номер телефона</p>
+                    <input type="tel" placeholder="+7 (999) 999-99-99">
+                    <img src="img/rashka.png" alt="">
+                </div>
+                <div class="call_btn">
+                    <button>Заказать звонок</button>
+                </div>
+            </div>
 
-    <!--        <div class="search_item">-->
-    <!--            <div class="need_item">-->
-    <!--                <h3>Найденные трансмиссии:</h3>-->
-    <!--                <h4 class="bgh4">6eT40</h4>-->
-    <!--                <h4>6eT40</h4>-->
-    <!--                <h4>6eT40</h4>-->
-    <!--            </div>-->
-    <!--            <div class="all_item">-->
-    <!--                <h3>Найденные товары:</h3>-->
-    <!--                <h4>Насос - Артикул / 43233</h4>-->
-    <!--                <h4>Соленоид - Артикул / 4493934-22</h4>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <div class="basket">-->
-    <!--            <img src="img/kolca.png" alt="kolca">-->
-    <!--            <div class="basket_text">-->
-    <!--                <h3>Товар добавлен в корзину</h3>-->
-    <!--                <p>Intermediate accumelator sleeve</p>-->
-    <!--            </div>-->
-    <!--            <div class="close_button"><img src="img/close%201.png" alt="close"></div>-->
-    <!--        </div>-->
-    <!--    </div>-->
+            <div class="search_item">
+                <div class="need_item">
+                    <h3>Найденные трансмиссии:</h3>
+                    <h4 class="bgh4">6eT40</h4>
+                    <h4>6eT40</h4>
+                    <h4>6eT40</h4>
+                </div>
+                <div class="all_item">
+                    <h3>Найденные товары:</h3>
+                    <h4>Насос - Артикул / 43233</h4>
+                    <h4>Соленоид - Артикул / 4493934-22</h4>
+                </div>
+            </div>
+            <div class="basket">
+                <img src="img/kolca.png" alt="kolca">
+                <div class="basket_text">
+                    <h3>Товар добавлен в корзину</h3>
+                    <p>Intermediate accumelator sleeve</p>
+                </div>
+                <div class="close_button"><img src="img/close%201.png" alt="close"></div>
+            </div>
+        </div>
 
     <div class="header__top">
         <div class="wrapper">
             <div class="header__top__left">
                 <div class="gps_img">
                     <img src="img/GPS.png" alt="GPS">
-                    <h4>Ваш город: <span>Москва</span></h4>
+                    <p>Ваш город: <span>Москва</span></p>
                 </div>
 
 
                 <div class="ptichka_img">
-                    <h4>Информация</h4>
+                    <p>Информация</p>
                     <img src="img/pticadown.png" alt="pticadown">
                 </div>
                 <div class="ptichka_img">
-                    <h4>Сотрудничество</h4>
+                    <p>Сотрудничество</p>
                     <img src="img/pticadown.png" alt="pticadown">
                 </div>
             </div>
@@ -116,7 +116,7 @@
         <div class="wrapper">
             <div class="info__top">
                 <div class="logo_shop">
-                    <img src="img/AVT-ZAP-logo.png" alt="LOGO">
+                    <a href="#"><img src="img/AVT-ZAP-logo.png" alt="LOGO"></a>
                     <div class="info_logo_shop">
                         <h3>AVT-ZAP</h3>
                         <p>Интернет-магазин запчастей <br>для АКПП</p>
@@ -767,7 +767,7 @@
 
 <div class="footer">
     <div class="footer_main_info wrapper">
-        <div class="catalog">
+        <div class="catalog wrapper ">
             <ul><span>КАТАЛОГ</span>
                 <li><a href="#">Каталог запчастей</a></li>
                 <li><a href="#">Масла</a></li>
@@ -802,29 +802,47 @@
             <p>Мы принимаем</p>
             <img src="img/visa_master.png" alt="cards">
         </div>
-        <div class="our__contact">
-            <div class="contact">
-                <p>КОНТАКТЫ</p>
-                <div class="phone"><a href="+73832919286">+7 383 291 92 86</a></div>
-                <div class="email"><a href="">info@avt-zap.ru</a></div>
-            </div>
-        </div>
-            <div class="our__adress">
-                <div class="adress">
-                    <span>КОНТАКТЫ</span>
-                    <p>г. Новосибирск,</p>
-                    <p>ул. Планировочная, 5, офис 105</p>
+
+
+        <div class="footer_input">
+            <div class="our__contact">
+                <div class="info_forms">
+                    <div class="contact">
+                        <p>КОНТАКТЫ</p>
+                        <div class="phone"><a href="+73832919286">+7 383 291 92 86</a></div>
+                        <div class="email"><a href="">info@avt-zap.ru</a></div>
+
+                    </div>
+                </div>
+                <div class="our__adress">
+                    <div class="adress">
+                        <span>АДРЕС</span>
+                        <p>г. Новосибирск,</p>
+                        <p>ул. Планировочная, 5, офис 105</p>
+                    </div>
                 </div>
             </div>
-        <div class="our_forms">
-            <p>Мы онлайн, воспользуйтесь <span>Форма обратной связи</span></p>
+            <div class="our_forms">
+                <p>Мы онлайн, воспользуйтесь <a href="#">Форма обратной связи</a></p>
+            </div>
+            <div class="discription_footer_info">
+                <p>Подпишитесь на нашу расслыку и <br>
+                    вы первыми узнаете о скидках и акциях</p>
+            </div>
+
+            <div class="footer_input_info">
+                <input type="text" placeholder="Введите ваш email">
+                <button class="search_button">Подписаться</button>
+            </div>
+
         </div>
 
+
     </div>
+
 </div>
 
 
-</div>
 
 
 <script src="js/jquery.js"></script>
