--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -200,8 +200,8 @@
                 <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="1" class=""></li>
                 <li data-bs-target="#carouselWithIndicators" data-bs-slide-to="2" class=""></li>
             </ol>
-            <div class="carousel-inner  ">
-                <div class="carousel-item active ">
+            <div class="carousel-inner sm  ">
+                <div class="carousel-item active sm ">
                     <div class="qwerty">
                         <div class="banner-info">
                             <div class="banner-item-content">
@@ -331,6 +331,7 @@
 </div>
 
 <div class="owl-carousel owl-theme wrapper ">
+    <div class="zxc">
     <div class="slide_1">
         <div class="into_block_info">
             <p class="carousel__text">Масла</p>
@@ -347,6 +348,8 @@
         </div>
 
     </div>
+    </div>
+    <div class="zxc">
     <div class="slide_1">
         <div class="into_block_info">
             <p class="carousel__text">Фильтры</p>
@@ -362,6 +365,8 @@
         </div>
 
     </div>
+    </div>
+    <div class="zxc">
     <div class="slide_1">
         <div class="into_block_info">
             <p class="carousel__text">Радиаторы</p>
@@ -378,6 +383,8 @@
         </div>
 
     </div>
+    </div>
+    <div class="zxc">
     <div class="slide_1">
         <div class="into_block_info">
             <p class="carousel__text">Масла</p>
@@ -394,6 +401,8 @@
         </div>
 
     </div>
+    </div>
+    <div class="zxc">
     <div class="slide_1">
         <div class="into_block_info">
             <p class="carousel__text">Фильтры</p>
@@ -409,6 +418,8 @@
         </div>
 
     </div>
+    </div>
+    <div class="zxc">
     <div class="slide_1">
         <div class="into_block_info">
             <p class="carousel__text">Радиаторы</p>
@@ -424,6 +435,7 @@
             <img src="img/radiator.png" alt="oil">
         </div>
 
+    </div>
     </div>
 </div>
 
@@ -774,78 +786,80 @@
 </div>
 
 <div class="footer">
-    <div class="footer_main_info wrapper">
-        <div class="catalog wrapper ">
-            <ul><span>КАТАЛОГ</span>
-                <li><a href="#">Каталог запчастей</a></li>
-                <li><a href="#">Масла</a></li>
-                <li><a href="#">Фильтра</a></li>
-                <li><a href="#">Радиаторы</a></li>
-                <li><a href="#">Sonnax</a></li>
-                <li><a href="#">Manual</a></li>
-                <li><a href="#">Новинки</a></li>
-                <li><a href="#">Акции</a></li>
-            </ul>
-        </div>
-        <div class="rybinator">
-            <ul><span>РУБРИКАТОР</span>
-                <li><a href="#">Доставка</a></li>
-                <li><a href="#">Оплата</a></li>
-                <li><a href="#">Гарантия</a></li>
-                <li><a href="#">Новости</a></li>
-                <li><a href="#">Журнал</a></li>
-                <li><a href="#">О магазине</a></li>
-                <li><a href="#">Контактная информация</a></li>
-            </ul>
-        </div>
-        <div class="footer_info">
-            <ul><span>ИНФОРМАЦИЯ</span>
-                <li><a href="#">Пользовательское соглашение <br>
-                    об использовании персональных данных</a></li>
-                <li><a href="#">Политика конфиденциальности</a></li>
-                <li><a href="#">Соглашение на рассылку <br>
-                    рекламных материалов</a></li>
-                <li><a href="#">Политика возвратов</a></li>
-            </ul>
-            <p>Мы принимаем</p>
-            <img src="img/visa_master.png" alt="cards">
-        </div>
+    <div class="supper_footer">
+        <div class="footer_main_info wrapper">
+            <div class="catalog wrapper ">
+                <ul><span>КАТАЛОГ</span>
+                    <li><a href="#">Каталог запчастей</a></li>
+                    <li><a href="#">Масла</a></li>
+                    <li><a href="#">Фильтра</a></li>
+                    <li><a href="#">Радиаторы</a></li>
+                    <li><a href="#">Sonnax</a></li>
+                    <li><a href="#">Manual</a></li>
+                    <li><a href="#">Новинки</a></li>
+                    <li><a href="#">Акции</a></li>
+                </ul>
+            </div>
+            <div class="rybinator">
+                <ul><span>РУБРИКАТОР</span>
+                    <li><a href="#">Доставка</a></li>
+                    <li><a href="#">Оплата</a></li>
+                    <li><a href="#">Гарантия</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Журнал</a></li>
+                    <li><a href="#">О магазине</a></li>
+                    <li><a href="#">Контактная информация</a></li>
+                </ul>
+            </div>
+            <div class="footer_info">
+                <ul><span>ИНФОРМАЦИЯ</span>
+                    <li><a href="#">Пользовательское соглашение <br>
+                        об использовании персональных данных</a></li>
+                    <li><a href="#">Политика конфиденциальности</a></li>
+                    <li><a href="#">Соглашение на рассылку <br>
+                        рекламных материалов</a></li>
+                    <li><a href="#">Политика возвратов</a></li>
+                </ul>
+                <p>Мы принимаем</p>
+                <img src="img/visa_master.png" alt="cards">
+            </div>
 
 
-        <div class="footer_input">
-            <div class="our__contact">
-                <div class="info_forms">
-                    <div class="contact">
-                        <p>КОНТАКТЫ</p>
-                        <div class="phone"><a href="+73832919286">+7 383 291 92 86</a></div>
-                        <div class="email"><a href="">info@avt-zap.ru</a></div>
+            <div class="footer_input">
+                <div class="our__contact">
+                    <div class="info_forms">
+                        <div class="contact">
+                            <p>КОНТАКТЫ</p>
+                            <div class="phone"><a href="+73832919286">+7 383 291 92 86</a></div>
+                            <div class="email"><a href="">info@avt-zap.ru</a></div>
 
+                        </div>
+                    </div>
+                    <div class="our__adress">
+                        <div class="adress">
+                            <span>АДРЕС</span>
+                            <p>г. Новосибирск,</p>
+                            <p>ул. Планировочная, 5, офис 105</p>
+                        </div>
                     </div>
                 </div>
-                <div class="our__adress">
-                    <div class="adress">
-                        <span>АДРЕС</span>
-                        <p>г. Новосибирск,</p>
-                        <p>ул. Планировочная, 5, офис 105</p>
-                    </div>
+                <div class="our_forms">
+                    <p>Мы онлайн, воспользуйтесь <a href="#">Форма обратной связи</a></p>
                 </div>
-            </div>
-            <div class="our_forms">
-                <p>Мы онлайн, воспользуйтесь <a href="#">Форма обратной связи</a></p>
-            </div>
-            <div class="discription_footer_info">
-                <p>Подпишитесь на нашу расслыку и <br>
-                    вы первыми узнаете о скидках и акциях</p>
+                <div class="discription_footer_info">
+                    <p>Подпишитесь на нашу расслыку и <br>
+                        вы первыми узнаете о скидках и акциях</p>
+                </div>
+
+                <div class="footer_input_info">
+                    <input type="text" placeholder="Введите ваш email">
+                    <button class="footer_search_button">Подписаться</button>
+                </div>
+
             </div>
 
-            <div class="footer_input_info">
-                <input type="text" placeholder="Введите ваш email">
-                <button class="search_button">Подписаться</button>
-            </div>
 
         </div>
-
-
     </div>
 
 </div>
