Final Project HTML

--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -89,11 +89,11 @@
 
                 <div class="ptichka_img">
                     <p>Информация</p>
-                    <img src="img/pticadown.png" alt="pticadown">
+                    <a href="#"><img src="img/pticadown.png" alt="pticadown"></a>
                 </div>
                 <div class="ptichka_img">
                     <p>Сотрудничество</p>
-                    <img src="img/pticadown.png" alt="pticadown">
+                    <a href="#"><img src="img/pticadown.png" alt="pticadown"></a>
                 </div>
 
                 <div class="ptica">
@@ -107,12 +107,12 @@
             <div class="header__top__right">
                 <ul>
                     <li><a href="#">Доставка</a></li>
-                    <li>Оплата</li>
-                    <li>Гарантия</li>
-                    <li>Новости</li>
-                    <li>Журнал</li>
-                    <li>О магазине</li>
-                    <li>Контакты</li>
+                    <li><a href="#">Оплата</a></li>
+                    <li><a href="#">Гарантия</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Журнал</a></li>
+                    <li><a href="#">О магазине</a></li>
+                    <li><a href="#">Контакт</a></li>
                 </ul>
 
             </div>
@@ -149,12 +149,12 @@
 
             <div class="our__whatsapp">
                 <img src="img/green_call.png" alt="call">
-                <p>Напишите нам в WhatsApp</p>
+                <p><a href="#">Напишите нам в WhatsApp</a></p>
             </div>
 
             <div class="our_phone">
                 <h3><a href="tel:+73832919286">+7 383 291 92 86</a></h3>
-                <p>форма обратной связи</p>
+               <p><a href="#">форма обратной связи</a></p>
             </div>
 
             <div class="header__bottom">
@@ -175,14 +175,14 @@
 
                 <div class="in-love-basket">
                     <img src="img/man.png" alt="login">
-                    <p>Войти</p>
+                    <p><a href="#">Войти</a></p>
                     <div></div>
                     <img src="img/love.png" alt="favorites">
-                    <p>Избранное</p>
+                    <p><a href="#">Избранное</a></p>
                     <div></div>
                     <img src="img/basker_black.png" alt="basket">
-                    <p>В корзине <br>
-                        нет товаров</p>
+                    <p><a href="#">В корзине <br>
+                        нет товаров</a></p>
                 </div>
 
             </div>
