--- a/ControlProject/index.html
+++ b/ControlProject/index.html
@@ -107,12 +107,12 @@
             <div class="header__top__right">
                 <ul>
                     <li><a href="#">Доставка</a></li>
-                    <li>Оплата</li>
-                    <li>Гарантия</li>
-                    <li>Новости</li>
-                    <li>Журнал</li>
-                    <li>О магазине</li>
-                    <li>Контакты</li>
+                    <li><a href="#">Оплата</a></li>
+                    <li><a href="#">Гарантия</a></li>
+                    <li><a href="#">Новости</a></li>
+                    <li><a href="#">Журнал</a></li>
+                    <li><a href="#">О магазине</a></li>
+                    <li><a href="#">Контакты</a></li>
                 </ul>
 
             </div>
@@ -156,6 +156,7 @@
                 <h3><a href="tel:+73832919286">+7 383 291 92 86</a></h3>
                 <p>форма обратной связи</p>
             </div>
+            <a href=""></a>
 
             <div class="header__bottom">
                 <div class="catalog__button">
@@ -175,14 +176,14 @@
 
                 <div class="in-love-basket">
                     <img src="img/man.png" alt="login">
-                    <p>Войти</p>
+                    <p><a href="#">Войти</a></p>
                     <div></div>
                     <img src="img/love.png" alt="favorites">
-                    <p>Избранное</p>
+                    <p><a href="#">Избранное</a></p>
                     <div></div>
                     <img src="img/basker_black.png" alt="basket">
-                    <p>В корзине <br>
-                        нет товаров</p>
+                    <p><a href="#">В корзине <br>
+                        нет товаров</a></p>
                 </div>
 
             </div>
@@ -332,110 +333,110 @@
 
 <div class="owl-carousel owl-theme wrapper ">
     <div class="zxc">
-    <div class="slide_1">
-        <div class="into_block_info">
-            <p class="carousel__text">Масла</p>
-            <div class="carousel__description">
-                <p>Трансмиссионное масло;<br>
-                    присалка в масло акпп</p>
+        <div class="slide_1">
+            <div class="into_block_info">
+                <p class="carousel__text">Масла</p>
+                <div class="carousel__description">
+                    <p>Трансмиссионное масло;<br>
+                        присалка в масло акпп</p>
+                </div>
+                <div class="carousel__btn">
+                    <button>Перейти</button>
+                </div>
             </div>
-            <div class="carousel__btn">
-                <button>Перейти</button>
+            <div class="carousel__img">
+                <img src="img/maslaTayota.png" alt="oil">
             </div>
-        </div>
-        <div class="carousel__img">
-            <img src="img/maslaTayota.png" alt="oil">
-        </div>
 
-    </div>
+        </div>
     </div>
     <div class="zxc">
-    <div class="slide_1">
-        <div class="into_block_info">
-            <p class="carousel__text">Фильтры</p>
-            <div class="carousel__description">
-                <p>Масляный фильтр;<br>фильтр воздушный</p>
+        <div class="slide_1">
+            <div class="into_block_info">
+                <p class="carousel__text">Фильтры</p>
+                <div class="carousel__description">
+                    <p>Масляный фильтр;<br>фильтр воздушный</p>
+                </div>
+                <div class="carousel__btn">
+                    <button>Перейти</button>
+                </div>
             </div>
-            <div class="carousel__btn">
-                <button>Перейти</button>
+            <div class="carousel__img">
+                <img src="img/filtr.png" alt="oil">
             </div>
-        </div>
-        <div class="carousel__img">
-            <img src="img/filtr.png" alt="oil">
-        </div>
 
-    </div>
+        </div>
     </div>
     <div class="zxc">
-    <div class="slide_1">
-        <div class="into_block_info">
-            <p class="carousel__text">Радиаторы</p>
-            <div class="carousel__description">
-                <p>Дополнительные;<br>
-                    радиаторы</p>
+        <div class="slide_1">
+            <div class="into_block_info">
+                <p class="carousel__text">Радиаторы</p>
+                <div class="carousel__description">
+                    <p>Дополнительные;<br>
+                        радиаторы</p>
+                </div>
+                <div class="carousel__btn">
+                    <button>Перейти</button>
+                </div>
             </div>
-            <div class="carousel__btn">
-                <button>Перейти</button>
+            <div class="carousel__img">
+                <img src="img/radiator.png" alt="oil">
             </div>
-        </div>
-        <div class="carousel__img">
-            <img src="img/radiator.png" alt="oil">
-        </div>
 
-    </div>
+        </div>
     </div>
     <div class="zxc">
-    <div class="slide_1">
-        <div class="into_block_info">
-            <p class="carousel__text">Масла</p>
-            <div class="carousel__description">
-                <p>Трансмиссионное масло;<br>
-                    присалка в масло акпп</p>
+        <div class="slide_1">
+            <div class="into_block_info">
+                <p class="carousel__text">Масла</p>
+                <div class="carousel__description">
+                    <p>Трансмиссионное масло;<br>
+                        присалка в масло акпп</p>
+                </div>
+                <div class="carousel__btn">
+                    <button>Перейти</button>
+                </div>
             </div>
-            <div class="carousel__btn">
-                <button>Перейти</button>
+            <div class="carousel__img">
+                <img src="img/maslaTayota.png" alt="oil">
             </div>
-        </div>
-        <div class="carousel__img">
-            <img src="img/maslaTayota.png" alt="oil">
-        </div>
 
-    </div>
+        </div>
     </div>
     <div class="zxc">
-    <div class="slide_1">
-        <div class="into_block_info">
-            <p class="carousel__text">Фильтры</p>
-            <div class="carousel__description">
-                <p>Масляный фильтр;<br>фильтр воздушный</p>
+        <div class="slide_1">
+            <div class="into_block_info">
+                <p class="carousel__text">Фильтры</p>
+                <div class="carousel__description">
+                    <p>Масляный фильтр;<br>фильтр воздушный</p>
+                </div>
+                <div class="carousel__btn">
+                    <button>Перейти</button>
+                </div>
             </div>
-            <div class="carousel__btn">
-                <button>Перейти</button>
+            <div class="carousel__img">
+                <img src="img/filtr.png" alt="oil">
             </div>
-        </div>
-        <div class="carousel__img">
-            <img src="img/filtr.png" alt="oil">
-        </div>
 
-    </div>
+        </div>
     </div>
     <div class="zxc">
-    <div class="slide_1">
-        <div class="into_block_info">
-            <p class="carousel__text">Радиаторы</p>
-            <div class="carousel__description">
-                <p>Дополнительные;<br>
-                    радиаторы</p>
+        <div class="slide_1">
+            <div class="into_block_info">
+                <p class="carousel__text">Радиаторы</p>
+                <div class="carousel__description">
+                    <p>Дополнительные;<br>
+                        радиаторы</p>
+                </div>
+                <div class="carousel__btn">
+                    <button>Перейти</button>
+                </div>
             </div>
-            <div class="carousel__btn">
-                <button>Перейти</button>
+            <div class="carousel__img">
+                <img src="img/radiator.png" alt="oil">
             </div>
-        </div>
-        <div class="carousel__img">
-            <img src="img/radiator.png" alt="oil">
-        </div>
 
-    </div>
+        </div>
     </div>
 </div>
 
