--- a/JavaScript/Home work/Lesson1.html
+++ b/JavaScript/Home work/Lesson1.html
@@ -154,12 +154,12 @@
     // console.log(123 === '123');
     // console.log(123 == '123');
 
-    let str = "20";
-    let a = 5;
-    document.write(str + a + "<br/>");
-    document.write(str - a + "<br/>");
-    document.write(str * '2' + "<br/>");
-    document.write(str / 2 + "<br/>");
+    // let str = "20";
+    // let a = 5;
+    // document.write(str + a + "<br/>");
+    // document.write(str - a + "<br/>");
+    // document.write(str * '2' + "<br/>");
+    // document.write(str / 2 + "<br/>");
 
 
 </script>
