--- a/JavaScript/Home work/Lesson1.html
+++ b/JavaScript/Home work/Lesson1.html
@@ -156,10 +156,14 @@
 
     // let str = "20";
     // let a = 5;
-    // document.write(str + a + "<br/>");
-    // document.write(str - a + "<br/>");
-    // document.write(str * '2' + "<br/>");
-    // document.write(str / 2 + "<br/>");
+    // document.write(str + a + "<br/>"); результат будет "205", потому что "+" тут работает не как в математике,
+    // соединяет стрингу и числовое значениек вместе, без математический действий
+    // document.write(str - a + "<br/>"); результат = 15 потому что происходит математическое действие, знак "-"
+    // работает в данном случае как обычный минус в математике
+    // document.write(str * '2' + "<br/>");результат = 40 потому что происходит математическое действие, знак "*"
+    // работает в данном случае как обычный умножить в математике
+    // document.write(str / 2 + "<br/>");результат = 20 потому что происходит математическое действие, знак "/"
+    // работает в данном случае как обычный разделить в математике
 
 
 </script>
