--- a/JavaScript/Class work/lesson1.html
+++ b/JavaScript/Class work/lesson1.html
@@ -8,14 +8,58 @@
 
 
 <script>
+    // 1. Створити масив з 10 чисел (можна використовувати Math.random Та Math.floor).
+    // Скласти результат цих чисел в змінній result.-->
+    // let a = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
+    // let result = a[0]+a[1]+a[2]+a[3]+a[4]+a[5]+a[6]+a[7]+a[8]+a[9]
+    // console.log(result)
+
+    // 2. Створити об'єкт book з наступними полями  - назва, кількість сторінок, жанр
+    // let book1 = {
+    //     name: 'Women',
+    //     page: 240,
+    //     genre: 'Roman'
+    // };
+    // 3. Створити об'єкт book з наступними полями  - назва, кількість сторінок, жанр, автори
+    // let book2 = {
+    //     name: 'Crow',
+    //     page: 137,
+    //     genre: 'horror',
+    //     author: 'Edgar Allan Poe'
+    // };
+
+    // 4. Створити маис об'єктів book з наступними полями
+    // - назва, кількість сторінок, жанр, автори. Вивести кожну книгу як окремий об'єкт
+
+    // let a = [book1, book2]
+    // console.log(a[0])
+    // console.log(a[1])
+
+    // 5. Напишіть код, який вираховує площу прямокутника висотою 23см. (змінна height)
+    // та шириною 10см (змінна width).
+
+    // let height = 23
+    // let width = 10
+    // let s = height*width
+    // console.log(s)
+
+    // Напиши код, який знаходить об'єм циліндра заввишки 10м (змінна heightC) та діаметром основи 4м (dC),
+    // результат помістіть у змінну v.
+
+    // let heightC = 10
+    // let dC = 4
+    // let v = heightC * dC
+    // console.log(v)
+
+    // 7. У прямокутного трикутника дві сторони n (зі значенням 3) та m (зі значенням 4).
+    // Знайдіть гіпотенузу k за теоремою Піфагора (потрібно використовувати функцію Math.pow (число, ступінь) або оператор зведення в ступінь **).
+
+    // let n = 3
+    // let m = 4
+    // let k = (Math.pow(3, 2)) + (Math.pow(4, 2))
+    // console.log(k)
+
 
 </script>
-
-
-
-
-
-
-
 </body>
 </html>
