--- a/JavaScript/Class work/lesson1.html
+++ b/JavaScript/Class work/lesson1.html
@@ -46,10 +46,11 @@
     // Напиши код, який знаходить об'єм циліндра заввишки 10м (змінна heightC) та діаметром основи 4м (dC),
     // результат помістіть у змінну v.
 
-    // let heightC = 10
-    // let dC = 4
-    // let v = heightC * dC
-    // console.log(v)
+    let heightC = 10
+    let dC = 4
+    const PI = 3.14
+    let v = PI * heightC * (Math.pow(dC))
+    console.log(v)
 
     // 7. У прямокутного трикутника дві сторони n (зі значенням 3) та m (зі значенням 4).
     // Знайдіть гіпотенузу k за теоремою Піфагора (потрібно використовувати функцію Math.pow (число, ступінь) або оператор зведення в ступінь **).
